# response-verification

./: .bazelrc  .cz.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md  SECURITY.md  WORKSPACE.bazel  dfx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.json
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/actions/setup-dfx/: action.yml
.github/actions/setup-pnpm/: action.yml
.github/repo_policies/: BOT_APPROVED_FILES
.github/workflows/: auto-approve.yml  build-and-test.yml  check-commit-messages.yml  check-pr-title.yml  commitizen.yml  create-release-pr.yml  e2e-tests.yml  generate-changelog.yml  merge.yml  publish.yml  pull-request.yml  release.yml  update-changelog.yml
bazel/binaryen/: BUILD.bazel  defs.bzl  repositories.bzl
bazel/binaryen/private/: BUILD.bazel  configure_toolchains.bzl  platforms.bzl  versions.bzl  wasm_opt.bzl
bazel/wasm_bindgen/: BUILD.bazel  repositories.bzl
bazel/wasm_bindgen/private/: BUILD.bazel  configure_toolchains.bzl  platforms.bzl  versions.bzl
binaryen/: BUILD.bazel  binaryen_platforms.bzl  binaryen_repositories.bzl  binaryen_toolchains.bzl  wasm_opt.bzl
cel-parser/: Cargo.toml
cel-parser/src/: ast_mapping.rs  error.rs  lib.rs  mock.rs  model.rs  parser.rs
cel-parser/tests/: cel_to_certification.rs
examples/certification/certified-counter/: README.md  dfx.json  package.json
examples/certification/certified-counter/src/backend/: Cargo.toml  backend.did
examples/certification/certified-counter/src/backend/src/: lib.rs
examples/certification/certified-counter/src/frontend/: .ic-assets.json  index.html  package.json  tsconfig.json  vite.config.mts
examples/certification/certified-counter/src/frontend/assets/: .ic-assets.json
examples/certification/certified-counter/src/frontend/src/: index.ts  main.css
examples/certified-counter/: README.md  dfx.json  package.json  webpack.config.js
examples/certified-counter/src/backend/: Cargo.toml
examples/certified-counter/src/backend/src/: lib.rs
examples/certified-counter/src/frontend/assets/: .ic-assets.json
examples/certified-counter/src/frontend/src/: index.html  index.ts
examples/http-certification/assets/: README.md  canister_ids.json  dfx.json
examples/http-certification/assets/src/backend/: Cargo.toml  backend.did
examples/http-certification/assets/src/backend/src/: lib.rs
examples/http-certification/assets/src/frontend/: index.html  package.json  vite.config.ts
examples/http-certification/assets/src/tests/: jest.config.ts  package.json
examples/http-certification/assets/src/tests/src/: http.spec.ts  wasm.ts
examples/http-certification/counter/: README.md
examples/http-certification/counter/src/backend/: Cargo.toml
examples/http-certification/counter/src/backend/src/: lib.rs
examples/http-certification/counter/src/tests/: package.json
examples/http-certification/counter/src/tests/src/: http.spec.ts  wasm.ts
examples/http-certification/custom-assets/: README.md  dfx.json
examples/http-certification/custom-assets/src/backend/: Cargo.toml
examples/http-certification/custom-assets/src/backend/src/: lib.rs
examples/http-certification/custom-assets/src/frontend/: package.json  tsconfig.json  vite.config.ts
examples/http-certification/custom-assets/src/tests/: package.json
examples/http-certification/custom-assets/src/tests/src/: http.spec.ts  request.ts  response.ts  wasm.ts
examples/http-certification/json-api/: README.md  dfx.json
examples/http-certification/json-api/src/backend/: Cargo.toml  backend.did
examples/http-certification/json-api/src/backend/src/: lib.rs  types.rs
examples/http-certification/json-api/src/tests/: jest.config.ts  package.json
examples/http-certification/json-api/src/tests/src/: request.ts  wasm.ts  (+2 more)
examples/http-certification/skip-certification/: README.md  dfx.json
examples/http-certification/skip-certification/.dfx/local/: canister_ids.json  network-id
examples/http-certification/skip-certification/src/backend/: Cargo.toml  backend.did
examples/http-certification/skip-certification/src/declarations/: backend.did.d.ts
examples/http-certification/skip-certification/src/tests/: package.json
examples/http-certification/upgrade-to-update-call/: README.md
examples/http-certification/upgrade-to-update-call/src/: backend.did
examples/http-certification/upgrade-to-update-call/src/motoko-backend/: main.mo
examples/http-certification/upgrade-to-update-call/src/rust-backend/: Cargo.toml
examples/http-certification/upgrade-to-update-call/src/tests/: package.json  tsconfig.json
examples/nodejs/: README.md  package-lock.json  package.json  tsconfig.json
examples/nodejs/src/: index.ts
examples/response-verification/nodejs/: README.md  package.json
examples/response-verification/nodejs/src/: index.ts
examples/response-verification/rust/src/: main.rs
examples/response-verification/web/: package.json
examples/response-verification/web/src/: index.html  index.ts
examples/rust/: Cargo.toml  README.md
examples/rust/src/: main.rs
examples/service-worker/: README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
examples/service-worker/src/: index.ts  sw.ts
examples/web/: README.md  package-lock.json  package.json  webpack.config.js
examples/web/src/: index.ts
ic-response-verification-rs/: BUILD.bazel  Cargo.toml  README.md  cargo-bazel-lock.json
ic-response-verification-rs/src/: base32.rs  body.rs  canister_id.rs  cbor.rs  certificate.rs  certificate_header.rs  certificate_header_field.rs  error.rs  hash_tree.rs  lib.rs  logger.rs  principal.rs  request.rs  response.rs  test_utils.rs  time.rs  validation.rs
ic-response-verification-ts/: BUILD.bazel  README.md  lib_wasm_typings.d.ts  package-lock.json  package.json
representation-independent-hashing/: Cargo.toml
representation-independent-hashing/src/: lib.rs  representation_independent_hash.rs  request_hash.rs  response_hash.rs
scripts/: e2e.sh  package.sh
(+13 files in other folders)
