[workspace]
resolver = "2"

members = [
    "examples/certification/certified-counter/src/backend",
    "examples/http-certification/assets/src/backend",
    "examples/http-certification/custom-assets/src/backend",
    "examples/http-certification/json-api/src/backend",
    "examples/http-certification/skip-certification/src/backend",
    "examples/http-certification/upgrade-to-update-call/src/rust-backend",
    "packages/ic-asset-certification",
    "packages/ic-cbor",
    "packages/ic-certification",
    "packages/ic-certificate-verification",
    "packages/ic-certification-testing",
    "packages/ic-http-certification",
    "packages/ic-http-certification-tests",
    "packages/ic-representation-independent-hash",
    "packages/ic-response-verification",
    "packages/ic-response-verification-test-utils",
    "packages/ic-response-verification-tests/src/rust-tests",
    "packages/ic-response-verification-wasm",
    "packages/ic-certification-testing-wasm",
]

# https://github.com/rust-lang/cargo/issues/9406
# includes all members except those that must be compiled to WASM
default-members = [
    "packages/ic-asset-certification",
    "packages/ic-cbor",
    "packages/ic-certification",
    "packages/ic-certificate-verification",
    "packages/ic-certification-testing",
    "packages/ic-http-certification",
    "packages/ic-http-certification-tests",
    "packages/ic-representation-independent-hash",
    "packages/ic-response-verification",
    "packages/ic-response-verification-test-utils",
    "packages/ic-response-verification-tests/src/rust-tests",
]

[workspace.package]
version = "3.0.3"
authors = ["DFINITY Stiftung"]
edition = "2021"
repository = "https://github.com/dfinity/response-verification"
homepage = "https://github.com/dfinity/response-verification#readme"
license = "Apache-2.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[workspace.dependencies]
nom = "7"
leb128 = "0.2"
log = "0.4"
hex = "0.4"
base64 = "0.22"
http = "1"
flate2 = "1"
sha2 = "0.10"
urlencoding = "2"
rstest = "0.23"
rstest_reuse = "0.7"
tokio = { version = "1", features = ["full"] }
cached = "0.54"
lazy_static = "1"
parking_lot = "0.12"
assert_matches = "1.5"

serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = "1"

thiserror = "1"
anyhow = "1"

candid = "0.10"
ic-agent = "0.39"
ic-utils = "0.39"
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
ic-verify-bls-signature = "0.6"

wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1"
wasm-bindgen-console-logger = "0.1"
# https://github.com/rust-random/rand#wasm-support
# https://docs.rs/getrandom/latest/getrandom/#webassembly-support
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
rand_chacha = "0.3"
once_cell = "1"

ic-asset-certification = { path = "./packages/ic-asset-certification", version = "3.0.3" }
ic-certification = { path = "./packages/ic-certification", default-features = false, version = "3.0.3" }
ic-http-certification = { path = "./packages/ic-http-certification", version = "3.0.3" }
ic-certification-testing = { path = "./packages/ic-certification-testing" }
ic-representation-independent-hash = { path = "./packages/ic-representation-independent-hash", version = "3.0.3" }
ic-certificate-verification = { path = "./packages/ic-certificate-verification", version = "3.0.3" }
ic-response-verification = { path = "./packages/ic-response-verification", version = "3.0.3" }
ic-response-verification-test-utils = { path = "./packages/ic-response-verification-test-utils" }
ic-cbor = { path = "./packages/ic-cbor", version = "3.0.3" }


[workspace.dependencies.ic-types]
git = "https://github.com/dfinity/ic"
rev = "1290256484f59c3d950c5e9a098e97383b248ad6"

[workspace.dependencies.ic-crypto-tree-hash]
git = "https://github.com/dfinity/ic"
rev = "1290256484f59c3d950c5e9a098e97383b248ad6"

[workspace.dependencies.ic-crypto-internal-threshold-sig-bls12381]
git = "https://github.com/dfinity/ic"
rev = "1290256484f59c3d950c5e9a098e97383b248ad6"

[workspace.dependencies.ic-crypto-internal-seed]
git = "https://github.com/dfinity/ic"
rev = "1290256484f59c3d950c5e9a098e97383b248ad6"

[workspace.dependencies.ic-crypto-internal-types]
git = "https://github.com/dfinity/ic"
rev = "1290256484f59c3d950c5e9a098e97383b248ad6"


[workspace.dependencies.serde]
version = "1"
features = ["derive"]
