load("@rules_rust//rust:defs.bzl", "rust_shared_library")

filegroup(
    name = "srcs",
    srcs = glob(["src/**/*.rs"]),
)

rust_shared_library(
    name = "lib_wasm",
    srcs = [":srcs"],
    visibility = ["//ic-response-verification-ts:__pkg__"],
    deps = ["@rules_rust//wasm_bindgen/3rdparty:wasm_bindgen"],
)
