[package]
name = "ic-response-verification"
version = "0.0.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
console_error_panic_hook = "0.1.7"
nom = "7.1.1"
js-sys = "0.3"
wasm-bindgen = "0.2.83"
thiserror = "1.0.37"
ic-certification = { version = "0.22.0", default_features = false }

[dev-dependencies]
hex = "0.4.3"
serde_cbor = "0.11.2"
wasm-bindgen-test = "0.3"
ic-certification = "0.22.0"
