load("@rules_rust//wasm_bindgen:wasm_bindgen.bzl", "rust_wasm_bindgen")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")

rust_wasm_bindgen(
    name = "lib_wasm_web",
    target = "web",
    wasm_file = "//ic-response-verification-rs:lib_wasm",
)

rust_wasm_bindgen(
    name = "lib_wasm_nodejs",
    target = "nodejs",
    wasm_file = "//ic-response-verification-rs:lib_wasm",
)

pkg_npm(
    name = "lib",
    package_name = "@dfinity/response-verification",
    srcs = ["package.json"],
    deps = [
        ":lib_wasm_nodejs",
        ":lib_wasm_web",
    ],
)
