load("@rules_rust//wasm_bindgen:wasm_bindgen.bzl", "rust_wasm_bindgen")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")
load("//bazel/binaryen:defs.bzl", "wasm_opt")

rust_wasm_bindgen(
    name = "lib_wasm_web",
    target = "web",
    wasm_file = "//ic-response-verification-rs:lib",
)

wasm_opt(
    name = "lib_wasm_web_opt",
    srcs = [":lib_wasm_web"],
)

rust_wasm_bindgen(
    name = "lib_wasm_nodejs",
    target = "nodejs",
    wasm_file = "//ic-response-verification-rs:lib",
)

wasm_opt(
    name = "lib_wasm_nodejs_opt",
    srcs = [":lib_wasm_nodejs"],
)

pkg_npm(
    name = "lib",
    package_name = "@dfinity/response-verification",
    srcs = ["package.json"],
    deps = [
        "lib_wasm_typings.d.ts",
        ":lib_wasm_nodejs_opt",
        ":lib_wasm_web_opt",
    ],
)
