[package]
name = "certification_certified_counter_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
candid.workspace = true
ic-cdk.workspace = true
ic-certification = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_cbor.workspace = true
sha2.workspace = true
