[package]
name = "http_certification_new_assets_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
serde.workspace = true
serde_cbor.workspace = true
sha2.workspace = true
ic-certification.workspace = true
ic-http-certification = { workspace = true, features = ["serde"] }
ic-asset-certification.workspace = true
lazy_static.workspace = true
base64.workspace = true
include_dir = { version = "0.7", features = ["glob"] }
