[package]
name = "http_certification_assets_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-http-certification.workspace = true
ic-asset-certification.workspace = true
include_dir = { version = "0.7", features = ["glob"] }
