[package]
name = "http_certification_custom_assets_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-http-certification.workspace = true
lazy_static.workspace = true
include_dir = { version = "0.7", features = ["glob"] }

# The following dependencies are only necessary for JSON serialization of metrics
serde.workspace = true
serde_json.workspace = true
