[package]
name = "http_certification_json_api_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
serde.workspace = true
serde_cbor.workspace = true
sha2.workspace = true
ic-http-certification = { workspace = true, features = ["serde"] }
base64.workspace = true
lazy_static.workspace = true
serde_json = "1.0"
matchit = "0.8"
