[package]
name = "http_certification_json_api_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
serde.workspace = true
ic-http-certification.workspace = true
lazy_static.workspace = true
serde_json.workspace = true
matchit = "0.8"
